# blockchain-hpc

./: Dockerfile  README.md  compose.yml  hardhat.config.ts  howto.md  package.json  references.md
chainnode/: node-api1.toml
contracts/: HpcClient.sol  HpcExample.sol  HpcOperator.sol  HpcSample.sol  HpcToken.sol  HpcValidator.sol
contracts/interface/: IHpcOperator.sol  IHpcValidator.sol
modules/executor/: pyproject.toml
modules/executor/executor/: __init__.py  fees.py
modules/executor/tests/: test_hello.py
modules/quantlib_server/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
modules/quantlib_server/.github/: ISSUE_TEMPLATE.md
modules/quantlib_server/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
modules/quantlib_server/src/quantlib_server/: __init__.py  cli.py  quantlib_server.py
modules/quantlib_server/tests/: __init__.py  test_quantlib_server.py
scripts/: deploy-token.ts  deploy-validator.ts  initialize-operator.ts  initialize-testnet.sh  local-addresses.sh  ping.ts  populate-cl.sh  quantlib.ts  reset-testnet.sh
test/: quantlib.ts  test_executor.sh  test_ipfs.sh  test_quantlib.sh  test_quantlib2.sh
