[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlib_server"
version = "0.1.0"
description = "Server for Quantlib"
readme = "README.rst"
authors = [
  {name = "Joseph C Wang", email = "joequant@gmail.com"}
]
maintainers = [
  {name = "Joseph C Wang", email = "joequant@gmail.com"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
    "pytest",
    "uvicorn",
    "fastapi",
    "pydantic-quantlib"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/joequant/quantlib_server/issues"
changelog = "https://github.com/joequant/quantlib_server/blob/master/changelog.md"
homepage = "https://github.com/joequant/quantlib_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

